--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_USER=postgres
 DB_PASSWORD=inidbgua
 DB_NAME=todo-app
 DB_HOST=localhost
+DB_URI=postgresql://postgres:Ejo3sHT8tUIlEPfhG1Fy@containers-us-west-175.railway.app:6635/railway
